# dagger-grpc

./: .bazelignore  .gitignore  AGENT.md  AGENTS.compressed.md  AGENTS.md  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  dependencies.bzl  repositories.bzl  shutdownall.sh  testall.sh  versions.bzl
.bcr/: metadata.template.json  presubmit.yml
.bcr/patches/: examples_use_registry.patch
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yaml  publish.yaml
api/: BUILD.bazel
api/src/main/kotlin/com/geekinasuit/daggergrpc/api/: ApplicationScope.kt  GrpcApplication.kt  GrpcCallContext.kt  GrpcCallScope.kt  GrpcServiceHandler.kt
examples/io_grpc/bazel_build_java/: BUILD.bazel  MODULE.bazel
examples/io_grpc/bazel_build_java/client/: BUILD.bazel
examples/io_grpc/bazel_build_java/client/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/client/: Client.java
examples/io_grpc/bazel_build_java/proto/: BUILD.bazel
examples/io_grpc/bazel_build_java/proto/src/main/proto/: hello_world.proto
examples/io_grpc/bazel_build_java/service/armeria/: BUILD.bazel
examples/io_grpc/bazel_build_java/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/: ExampleServer.java
examples/io_grpc/bazel_build_java/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/dagger/: ApplicationGraph.java  ApplicationGraphModule.java  GrpcCallScopeGraph.java  GrpcCallScopeGraph.kt  GrpcCallScopeGraphModule.java  GrpcHandlersModule.java  GrpcHandlersModule.kt
examples/io_grpc/bazel_build_java/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/services/: HelloWorldService.java  HelloWorldServiceAdapter.java  WhateverService.java  WhateverServiceAdapter.java
examples/io_grpc/bazel_build_java/service/armeria/src/test/java/com/geekinasuit/daggergrpc/iogrpc/example/armeria/: BUILD.bazel  ServiceTest.java
examples/io_grpc/bazel_build_kt/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/io_grpc/bazel_build_kt/client/: BUILD.bazel
examples/io_grpc/bazel_build_kt/client/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/client/: example.kt
examples/io_grpc/bazel_build_kt/proto/: BUILD.bazel
examples/io_grpc/bazel_build_kt/proto/src/main/proto/: whatever.proto
examples/io_grpc/bazel_build_kt/service/armeria/: BUILD.bazel
examples/io_grpc/bazel_build_kt/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/dagger/: ApplicationGraph.kt  ApplicationGraphModule.kt  GrpcCallScopeGraph.kt  GrpcHandlersModule.kt
examples/io_grpc/bazel_build_kt/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/services/: HelloWorldService.kt  HelloWorldServiceAdapter.kt  WhateverService.kt  WhateverServiceAdapter.kt
examples/io_grpc/bazel_build_kt/service/armeria/src/test/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/: BUILD.bazel  ServiceTest.kt
io_grpc/: README.md
io_grpc/compiler/: BUILD.bazel
io_grpc/compiler/apt/: BUILD.bazel  README.md
io_grpc/compiler/apt/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/compile/: AdapterGenerator.kt  ApplicationValidator.kt  DaggerGrpcAPTProcessor.kt  Generator.kt  ModuleGenerator.kt  ksp_infra.kt  model.kt  types.kt  util.kt
io_grpc/compiler/apt/src/test/kotlin/com/geekinasuit/daggergrpc/iogrpc/compile/: BUILD.bazel  DaggerGrpcAPTProcessorTest.kt  HandlerGeneratorTest.kt  ModuleGeneratorTest.kt  foo.proto  utils.kt
io_grpc/compiler/common/: BUILD.bazel  README.md
io_grpc/compiler/common/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/compile/: AbstractValidator.kt  HandlerValidator.kt  metadata.kt  utils.kt  validations.kt
io_grpc/compiler/common/src/test/kotlin/com/geekinasuit/daggergrpc/iogrpc/compile/: BUILD.bazel  CommonTest.kt
io_grpc/compiler/ksp/: BUILD.bazel  README.md
io_grpc/compiler/ksp/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/compile/: DaggerGrpcProcessor.kt  DaggerGrpcProcessorProvider.kt  DaggerGrpcSymbolProcessor.kt  DaggerGrpcSymbolProcessorProvider.kt  adapter_generator.kt  module_generator.kt  util.kt
io_grpc/compiler/ksp/src/test/kotlin/com/geekinasuit/daggergrpc/iogrpc/compile/: BUILD.bazel  DaggerGrpcProcessorTest.kt  DaggerGrpcSymbolProcessorTest.kt
io_grpc/example/client/: BUILD.bazel
io_grpc/example/client/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/client/: example.kt
io_grpc/example/proto/: BUILD.bazel
io_grpc/example/service/armeria/: BUILD.bazel
io_grpc/example/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/: ExampleServer.kt  HelloWorldService.kt  HelloWorldServiceAdapter.kt  WhateverService.kt  WhateverServiceAdapter.kt  example.kt  grpc.kt
io_grpc/example/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/dagger/: ApplicationGraphModule.kt  GrpcCallScopeGraph.kt  GrpcCallScopeGraphModule.kt
io_grpc/lib/: BUILD.bazel
ksp-apt-bridge/: BUILD.bazel  README.md
ksp-apt-bridge/src/main/kotlin/com/geekinasuit/kspbridge/apt/: APTAnnotation.kt  APTClassDeclaration.kt  APTFunctionDeclaration.kt  APTLogger.kt  APTName.kt  APTNode.kt  APTPropertyDeclaration.kt  APTType.kt  APTTypeArgument.kt  APTTypeReference.kt  APTValueArgument.kt  APTValueParameter.kt
ksp-apt-bridge/src/test/kotlin/com/geekinasuit/kspbridge/apt/: BUILD.bazel  ModelTest.kt
scripts/: release.sh
thoughts/shared/plans/: 2026-03-27-T00-verify-head-builds.md  T16-bcr-publication.compressed.md  T16-bcr-publication.md  v0.2.0-module-generation.compressed.md  v0.2.0-module-generation.md
thoughts/shared/research/: 2026-03-27-codebase-overview.md
thoughts/shared/tickets/: T00-verify-head-builds.md  T01-fix-kotlin-example-bzlmod.md  T02-pin-kotlin-toolchain.md  T03-proto-version-skew.md  T04-design-module-generation.md  T05-ksp-module-generation.md  T06-apt-module-generation.md  T07-extend-ksp-apt-bridge.md  overview.md  (+11 more)
util/armeria/: BUILD.bazel
util/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/armeria/: armeria_grpc_util.kt
(+4 files in other folders)
