###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "dagger-grpc",
    version = "0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "grpc", version = "1.69.0")
bazel_dep(name = "grpc-java", version = "1.69.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "ch.qos.logback:logback-classic:1.4.11",
        "com.github.tschuchortdev:kotlin-compile-testing-ksp:1.6.0",
        "com.github.tschuchortdev:kotlin-compile-testing:1.6.0",
        "com.google.auto:auto-common:1.2.2",
        "com.google.auto.service:auto-service:1.1.1",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.dagger:dagger-compiler:2.55",
        "com.google.dagger:dagger-spi:2.55",
        "com.google.dagger:dagger:2.55",
        "com.google.devtools.ksp:symbol-processing-api:1.9.0-1.0.12",
        "com.google.guava:guava:33.0.0-jre",
        "com.google.protobuf:protobuf-java:4.29.3",
        "com.google.protobuf:protobuf-kotlin:4.29.3",
        "com.google.testing.compile:compile-testing:0.21.0",
        "com.google.truth:truth:1.4.4",
        "com.linecorp.armeria:armeria-grpc:1.26.4",
        "com.linecorp.armeria:armeria:1.26.4",
        "com.squareup:javapoet:1.13.0",
        "com.squareup:kotlinpoet-jvm:2.1.0",
        "com.squareup:kotlinpoet-ksp:2.1.0",
        "io.github.oshai:kotlin-logging-jvm:5.1.0",
        "io.grpc:grpc-kotlin-stub:1.4.1",
        "io.grpc:grpc-netty-shaded:1.71.0",
        "io.grpc:grpc-protobuf:1.71.0",
        "io.grpc:grpc-stub:1.71.0",
        "javax.inject:javax.inject:1",
        "junit:junit:4.13.2",
        "org.apache.tomcat:annotations-api:6.0.53",
        "org.hamcrest:hamcrest-library:1.3",
        "org.slf4j:slf4j-jdk14:2.0.11",
    ],
    fetch_sources = True,
    repositories = [
        "m2local",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
