load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "ksp-apt-bridge",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "@maven//:com_google_auto_auto_common",
        "@maven//:com_google_auto_service_auto_service_annotations",
        "@maven//:com_google_devtools_ksp_symbol_processing_api",
    ],
)
