module(
    name = "dagger-grpc-examples-io_grpc_bazel_java",
    version = "0.1",
)

bazel_dep(name = "dagger-grpc", version = "0.1")
local_path_override(
    module_name = "dagger-grpc",
    path = "../../..",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.9.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "protobuf", version = "23.1")
bazel_dep(name = "grpc", version = "1.69.0")
bazel_dep(name = "grpc-java", version = "1.69.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.0.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    testonly = True,
    artifact = "truth",
    group = "com.google.truth",
    version = "1.4.4",
)
maven.artifact(
    testonly = True,
    artifact = "junit",
    group = "junit",
    version = "4.13.2",
)
maven.install(
    artifacts = [
        "com.google.dagger:dagger-compiler:2.55",
        "com.google.dagger:dagger:2.55",
        "com.google.protobuf:protobuf-java:4.29.3",
        "com.linecorp.armeria:armeria-grpc:1.26.4",
        "com.linecorp.armeria:armeria:1.26.4",
        "io.grpc:grpc-netty-shaded:1.71.0",
        "io.grpc:grpc-protobuf:1.71.0",
        "io.grpc:grpc-stub:1.71.0",
        "javax.inject:javax.inject:1",
    ],
    fetch_sources = True,
    repositories = [
        "m2local",
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True,
)
use_repo(maven, "maven")
