load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_ksp_plugin")

build_test(
    name = "confirm_example_builds",
    targets = [
        "//client",
        "//service/armeria",
    ],
)

kt_ksp_plugin(
    name = "dagger-compiler",
    processor_class = "dagger.internal.codegen.ComponentProcessor",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_google_dagger_dagger_compiler",
    ],
)
