load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_java//java:defs.bzl", "java_plugin")

kt_jvm_library(
    name = "common",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "//api",
        "@maven//:com_google_devtools_ksp_symbol_processing_api",
    ],
)
