load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "//io_grpc/example/proto:grpc",
        "@com_google_protobuf//java/core",
        "@maven//:com_google_guava_guava",
        "@maven//:com_linecorp_armeria_armeria_grpc",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_protobuf_lite",
    ],
)

java_binary(
    name = "client",
    main_class = "com.geekinasuit.daggergrpc.iogrpc.example.client.ExampleKt",
    runtime_deps = [
        ":lib",
    ],
)
