load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

package(default_visibility = ["//io_grpc/example:__subpackages__"])

proto_library(
    name = "proto",
    srcs = glob(["src/main/proto/**/*.proto"]),
)

java_proto_library(
    name = "proto_jvm",
    deps = [":proto"],
)

java_grpc_library(
    name = "grpc",
    srcs = [":proto"],
    deps = [
        ":proto_jvm",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
    ],
)
