load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_proto_grpc_java//:java_proto_library.bzl", "java_proto_library")

package(default_visibility = ["//io_grpc/example:__subpackages__"])

proto_library(
    name = "proto",
    srcs = glob(["src/main/proto/**/*.proto"]),
)

java_proto_library(
    name = "proto_jvm",
    protos = [":proto"],
)

java_grpc_library(
    name = "grpc",
    srcs = [":proto"],
    deps = [
        ":proto_jvm",
        "@maven//:io_grpc_grpc_protobuf",
        "@maven//:io_grpc_grpc_stub",
    ],
)
