load("@rules_java//java:defs.bzl", "java_binary", "java_library")

package(default_visibility = ["//visibility:public"])

java_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.java"]),
    deps = [
        "//proto:grpc",
        "//proto:proto_jvm",
        "@maven//:com_google_guava_guava",
        "@maven//:com_linecorp_armeria_armeria_grpc",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_protobuf_lite",
        "@maven//:com_google_protobuf_protobuf_java",
    ],
)

java_binary(
    name = "client",
    main_class = "com.geekinasuit.daggergrpc.iogrpc.example.client.Client",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":lib",
    ],
)
