load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    deps = [
        "//proto:grpc",
        "@maven//:com_google_guava_guava",
        "@maven//:com_linecorp_armeria_armeria_grpc",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_protobuf_lite",
        "@com_google_protobuf//java/core",
    ],
)

kt_jvm_binary(
    name = "client",
    main_class = "com.geekinasuit.daggergrpc.iogrpc.example.client.ExampleKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":lib",
    ],
)
