load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_proto_grpc_java//:java_proto_library.bzl", "java_proto_library")
load("@grpc-kotlin//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "proto",
    srcs = glob(["src/main/proto/**/*.proto"]),
)

kt_jvm_proto_library(
    name = "proto_kt",
    deps = [":proto"],
)

kt_jvm_grpc_library(
    name = "grpc",
    srcs = [":proto"],
    deps = [":proto_kt"],
)
