load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "//proto:grpc",
        "@dagger-grpc//api",
        "@dagger-grpc//third_party/dagger",  # Use your own dagger mapping in your repo
        "@dagger-grpc//util/armeria",
        "@maven//:com_google_guava_guava",
        "@maven//:com_linecorp_armeria_armeria_grpc",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_protobuf_lite",
        "@protobuf//java/core",
    ],
)

kt_jvm_binary(
    name = "armeria",
    main_class = "com.geekinasuit.daggergrpc.iogrpc.example.armeria.ExampleKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":lib",
    ],
)
