load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.java"]),
    plugins = [
        "@dagger-grpc//third_party/dagger:dagger-compiler",
        "@dagger-grpc//io_grpc/compiler/apt:plugin",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "//proto:grpc",
        "//proto:proto_jvm",
        "@dagger-grpc//api",
        "@dagger-grpc//third_party/dagger",  # This target happens to pair the raw dagger dep with the processor.
        "@dagger-grpc//util/armeria",
        "@grpc-java//api",
        "@grpc-java//stub",
        "@maven//:com_google_guava_guava",
        "@maven//:com_linecorp_armeria_armeria",
        "@maven//:com_linecorp_armeria_armeria_grpc",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_protobuf_lite",
        "@protobuf//java/core",
    ],
)

java_binary(
    name = "armeria",
    main_class = "com.geekinasuit.daggergrpc.iogrpc.example.armeria.ExampleServer",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":lib",
    ],
)
