load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

kt_jvm_library(
    name = "lib",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    plugins = [
        "@dagger-grpc//io_grpc/compiler/ksp:plugin",
        "//:dagger-compiler",
    ],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_slf4j_slf4j_jdk14",
    ],
    deps = [
        "//proto:grpc",
        "@com_google_protobuf//java/core",
        "@dagger-grpc//api",
        "@dagger-grpc//third_party/dagger",  # Use your own dagger mapping in your repo
        "@dagger-grpc//util/armeria",
        "@maven//:com_google_guava_guava",
        "@maven//:com_linecorp_armeria_armeria_grpc",
        "@maven//:io_github_oshai_kotlin_logging_jvm",
        "@maven//:io_grpc_grpc_protobuf_lite",
    ],
)

kt_jvm_binary(
    name = "armeria",
    main_class = "com.geekinasuit.daggergrpc.iogrpc.example.armeria.ExampleKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":lib",
    ],
)
