load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "ModelTest",
    srcs = ["ModelTest.kt"],
    associates = ["//ksp-apt-bridge"],
    deps = [
        "@maven//:com_google_auto_auto_common",
        "@maven//:com_google_devtools_ksp_symbol_processing_api",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
