load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_proto_grpc_java//:java_proto_library.bzl", "java_proto_library")

kt_jvm_test(
    name = "CommonTest",
    srcs = ["CommonTest.kt"],
    associates = ["//io_grpc/compiler/common"],
    deps = [
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
